fix: solved ui scroll bar overlapping

--- a/src/main/resources/fxml/mediaPlayer_light.css
+++ b/src/main/resources/fxml/mediaPlayer_light.css
@@ -140,20 +140,14 @@
     -fx-background-color: black;
 }
 
-.scroll-bar .thumb:hover {
-    -fx-background-color: #888;
-}
-
 .scroll-bar .increment-button,
 .scroll-bar .decrement-button {
-    -fx-padding: 0;
     -fx-background-color: transparent;
     -fx-shape: " ";
 }
 
 .scroll-bar .increment-arrow,
 .scroll-bar .decrement-arrow {
-    -fx-padding: 0;
     -fx-background-color: transparent;
 }
 
